[gd_scene load_steps=19 format=2]

[ext_resource path="res://screens/menu.theme" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu/covid.png" type="Texture" id=3]
[ext_resource path="res://screens/Menu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Kenney Rocket.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 95
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 95
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 95
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 46
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.001
anchor_bottom = 1.002
margin_right = -1.02405
margin_bottom = -1.20007
rect_pivot_offset = Vector2( 960, 540 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Background"]
anchor_left = 0.355
anchor_top = 0.143
anchor_right = 0.698
anchor_bottom = 0.352
margin_left = 0.47998
margin_top = 0.199997
margin_right = 0.247986
margin_bottom = -0.200012
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "GINA"
align = 1
valign = 1
percent_visible = -0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.427212
anchor_top = 0.505606
anchor_right = 0.642212
anchor_bottom = 0.838606
margin_left = 0.35199
margin_top = -0.200012
margin_right = 220.192
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_constants/separation = 28
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Inicio" type="Button" parent="MainMenu"]
margin_right = 440.0
margin_bottom = 114.0
focus_neighbour_top = NodePath("../Salir")
focus_neighbour_bottom = NodePath("../Configuracion")
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Inicio"

[node name="Configuracion" type="Button" parent="MainMenu"]
margin_top = 142.0
margin_right = 440.0
margin_bottom = 257.0
focus_neighbour_top = NodePath("../Inicio")
focus_neighbour_bottom = NodePath("../Salir")
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = " Configuracion"

[node name="Salir" type="Button" parent="MainMenu"]
margin_top = 285.0
margin_right = 440.0
margin_bottom = 400.0
focus_neighbour_top = NodePath("../Configuracion")
focus_neighbour_bottom = NodePath("../Inicio")
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Salir"

[node name="MenuConfig" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuConfig"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
color = Color( 0.176471, 0.0235294, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig"]
anchor_left = 0.343
anchor_top = 0.06
anchor_right = 0.663
anchor_bottom = 0.183
margin_left = -0.367828
margin_top = -0.266624
margin_right = -5.01782
margin_bottom = -0.030632
custom_fonts/font = SubResource( 5 )
text = "Configuraciones"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu2" type="VBoxContainer" parent="MenuConfig"]
anchor_left = 0.018
anchor_top = 0.239
anchor_right = 0.99
anchor_bottom = 0.899
margin_left = 0.155035
margin_top = -0.0809784
margin_right = -0.173035
margin_bottom = -0.0809937
size_flags_horizontal = 5
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxContainer" type="HBoxContainer" parent="MenuConfig/MainMenu2"]
margin_right = 995.0
margin_bottom = 54.0
custom_constants/separation = 25
alignment = 1

[node name="Video" type="Button" parent="MenuConfig/MainMenu2/BoxContainer"]
margin_right = 315.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../../../..")
focus_neighbour_right = NodePath("../Audio")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Video"

[node name="Audio" type="Button" parent="MenuConfig/MainMenu2/BoxContainer"]
margin_left = 340.0
margin_right = 655.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../VideoBtn")
focus_neighbour_right = NodePath("../ControlsBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Audio"

[node name="Controles" type="Button" parent="MenuConfig/MainMenu2/BoxContainer"]
margin_left = 680.0
margin_right = 995.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../AudioBtn")
focus_neighbour_right = NodePath("../VideoBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Controls"

[node name="MainConfiguracion" type="VBoxContainer" parent="MenuConfig/MainMenu2"]
margin_top = 79.0
margin_right = 995.0
margin_bottom = 369.0

[node name="ConfiguracionVideo" type="GridContainer" parent="MenuConfig/MainMenu2/MainConfiguracion"]
margin_right = 995.0
margin_bottom = 179.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_top = 4.0
margin_right = 795.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Vsync"

[node name="CheckButton" type="CheckButton" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_left = 923.0
margin_right = 995.0
margin_bottom = 43.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_top = 72.0
margin_right = 795.0
margin_bottom = 107.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
text = "Pantalla completa"

[node name="CheckBox" type="CheckBox" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_left = 935.0
margin_top = 68.0
margin_right = 995.0
margin_bottom = 111.0
size_flags_horizontal = 8
text = "on"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_top = 140.0
margin_right = 795.0
margin_bottom = 175.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 11 )
text = "Resolucion"

[node name="OptionButton" type="OptionButton" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionVideo"]
margin_left = 820.0
margin_top = 136.0
margin_right = 995.0
margin_bottom = 179.0
size_flags_horizontal = 8
text = "1920 * 1080"
items = [ "1920 * 1080", null, false, 0, null, "1280 * 720", null, false, 1, null ]
selected = 0

[node name="ConfiguracionAudio" type="GridContainer" parent="MenuConfig/MainMenu2/MainConfiguracion"]
margin_top = 183.0
margin_right = 995.0
margin_bottom = 286.0
theme = ExtResource( 1 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionAudio"]
margin_top = 4.0
margin_right = 898.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 12 )
text = "Audio"

[node name="CheckButton" type="CheckButton" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionAudio"]
margin_left = 923.0
margin_right = 995.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionAudio"]
margin_top = 68.0
margin_right = 898.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 13 )
text = "Volumen"

[node name="HSlider" type="HSlider" parent="MenuConfig/MainMenu2/MainConfiguracion/ConfiguracionAudio"]
margin_left = 923.0
margin_top = 68.0
margin_right = 995.0
margin_bottom = 103.0
size_flags_vertical = 1

[node name="ConfiguracionControles" type="GridContainer" parent="MenuConfig/MainMenu2/MainConfiguracion"]
margin_top = 290.0
margin_right = 995.0
margin_bottom = 290.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/Inicio" to="." method="_on_Inicio_pressed"]
[connection signal="pressed" from="MainMenu/Configuracion" to="." method="_on_Configuracion_pressed"]
[connection signal="pressed" from="MainMenu/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenu2/BoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenu2/BoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenu2/BoxContainer/Controles" to="." method="_on_Controles_pressed"]
